--- a/my-react-project/src/stylesheet/Character.css
+++ b/my-react-project/src/stylesheet/Character.css
@@ -1,5 +1,6 @@
 .characterCard {
-  background-color: turquoise;
+  background-color: #09a7c2;
+  overflow-wrap: break-word;
 }
 
 .imageCharacter {
