--- a/my-react-project/src/stylesheet/App.css
+++ b/my-react-project/src/stylesheet/App.css
@@ -1,29 +1,33 @@
 .page {
   background-color: black;
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
-  padding: 30px 15px;
-  width: 100%;
 }
 
 .logo {
   height: 100px;
   width: 300px;
   margin-bottom: 30px;
+  padding-top: 15%;
 }
 
-.input {
+.inputSearch {
   width: 450px;
   border-color: cyan;
   background-color: black;
-  color: white;
+  margin-left: 10px;
 }
 
-.characterList {
+.allCharacters {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   display: flex;
   flex-direction: row;
+  justify-content: center;
   flex-wrap: wrap;
-  width: 100%;
+  align-items: center;
 }
