--- a/my-react-project/src/stylesheet/List.css
+++ b/my-react-project/src/stylesheet/List.css
@@ -1,9 +1,8 @@
 .cards {
-  background-color: #09a7c2;
   color: white;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-around;
-  width: 100%;
+  width: 80%;
+  background-color: black;
 }
