--- a/src/stylesheet/CharacterDetails.css
+++ b/src/stylesheet/CharacterDetails.css
@@ -8,23 +8,23 @@
 .singleCharacterCard {
   margin-bottom: 20px;
   background-color: #09a7c2;
-  overflow-wrap: break-word;
   color: white;
   display: flex;
-  flex-direction: row;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   height: 250px;
   width: 450px;
 }
-
+.imageCharacter {
+  height: 250px;
+}
 .link {
   color: white;
 }
 
 .characterDetails {
+  padding-right: 10px;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  width: 50%;
+  align-items: flex-start;
 }
