--- a/src/stylesheet/App.css
+++ b/src/stylesheet/App.css
@@ -1,24 +1,47 @@
-.page {
-  background-color: black;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+* {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  text-decoration: none;
 }
 
 .logo {
   height: 100px;
   width: 300px;
   margin-bottom: 30px;
-  padding-top: 15%;
+  padding-top: 20px;
+}
+
+.filters {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .inputsearch {
-  width: 450px;
+  width: 250px;
   border-color: cyan;
   background-color: black;
   margin-left: 10px;
   color: white;
   margin-bottom: 15px;
+}
+
+.page {
+  background-color: black;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+@media all and (min-width: 768px) {
+  .filters {
+    flex-direction: row;
+  }
+  .page {
+    height: 100vh;
+  }
 }
