--- a/src/stylesheet/App.css
+++ b/src/stylesheet/App.css
@@ -6,8 +6,8 @@
 }
 
 .logo {
-  height: 100px;
-  width: 300px;
+  height: 200px;
+  width: 400px;
   margin-bottom: 30px;
   padding-top: 20px;
 }
@@ -22,15 +22,17 @@
 .inputsearch {
   width: 250px;
   border-color: cyan;
-  background-color: black;
+  background-color: transparent;
   margin-left: 10px;
   color: white;
   margin-bottom: 15px;
 }
 
 .page {
-  background-color: black;
-  height: 100%;
+  background-image: url("../Image/background.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -42,6 +44,6 @@
     flex-direction: row;
   }
   .page {
-    height: 100vh;
+    height: 100%;
   }
 }
