--- a/src/stylesheet/CharacterDetails.css
+++ b/src/stylesheet/CharacterDetails.css
@@ -14,10 +14,10 @@
   justify-content: space-between;
   height: 350px;
   width: 550px;
+  border-radius: 10px;
 }
 .imageCharacter {
   height: 250px;
-  padding-left: 10px;
 }
 .link {
   color: white;
