--- a/src/stylesheet/Notfound.css
+++ b/src/stylesheet/Notfound.css
@@ -3,10 +3,12 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  height: 100vh;
 }
 
 .notfoundImg {
   width: 300px;
   height: 200px;
   align-content: center;
+  margin-top: 25px;
 }
