add filter style

--- a/src/stylesheet/CharacterDetails.scss
+++ b/src/stylesheet/CharacterDetails.scss
@@ -7,7 +7,7 @@
 
 .singleCharacterCard {
   margin-bottom: 20px;
-  background-color: #09a7c2;
+  background-color: #000000;
   color: white;
   display: flex;
   align-items: center;
