--- a/src/stylesheet/App.scss
+++ b/src/stylesheet/App.scss
@@ -37,6 +37,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
+  background-position: 100% 100%;
 }
 
 @media all and (min-width: 768px) {
