--- a/src/stylesheet/Filters/Filter.scss
+++ b/src/stylesheet/Filters/Filter.scss
@@ -16,7 +16,7 @@
   }
 
   @media all and (min-width: 1200px) {
-    grid-template-columns: 0.3fr 0.3fr 0.1fr 0.3fr 0.1fr 0.3fr 0.1fr 0.3fr;
+    grid-template-columns: 0.3fr 0.3fr 0.1fr 0.3fr 0.1fr 0.3fr 0.1fr;
     margin: 0;
   }
 }
