--- a/src/stylesheet/Filters/FilterSelect.scss
+++ b/src/stylesheet/Filters/FilterSelect.scss
@@ -1,8 +1,10 @@
+@import "../Core/variables.scss";
+
 .form {
   &__label {
-    color: #28c4c4;
+    color: $color-detail;
     font-size: 25px;
-    background-color: #000000;
+    background-color: $color-background;
     margin-right: 10px;
 
     @media all and (min-width: 768px) {
@@ -13,9 +15,9 @@
   &__select {
     width: 200px;
     height: 40px;
-    background: #000000;
-    color: white;
-    border: 1px solid #28c4c4;
+    background: $color-background;
+    color: $color-icon;
+    border: 1px solid $color-detail;
     border-radius: 6px;
     padding-left: 10px;
     padding-right: 10px;
