--- a/src/stylesheet/App.scss
+++ b/src/stylesheet/App.scss
@@ -29,7 +29,7 @@
 }
 
 .page {
-  background-image: url("../image/background.jpg");
+  background-image: url("../Image/background.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   height: 100%;
